<resources>
    <string name="app_name">TraceRoute</string>

    <!-- String resources throughout the application -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="values_text">Values</string>
    <string name="accelerometer_text">Accelerometer</string>
    <string name="gyroscope_text">Gyroscope</string>
    <string name="linear_acceleration_text">Linear Acceleration</string>
    <string name="units">Units:</string>
    <string name="acceleration_units">m/s^2</string>
    <string name="radian_units">rad/sec</string>
    <string name="barometer_text">Barometer</string>
    <string name="pressure_units">hPa (millibar)</string>
    <string name="gravity_text">Gravity</string>
    <string name="step_counter_text">Step Counter</string>
    <string name="step_units">steps</string>
    <string name="step_detector_text">Step Detector</string>
    <string name="altitude_meters">Estimated Altitude (meters)</string>
    <string name="altitude_feet">Estimated Altitude (feet)</string>
    <string name="mbar_units">Pressure (millibar)</string>
    <string name="z_coordinate">Z</string>
    <string name="y_coordinate">Y</string>
    <string name="x_coordinate">X</string>
    <string name="steps">Steps</string>
    <string name="title_activity_open_gl">OpenGL</string>
    <string name="direction_vector">Direction Vectors</string>
    <string name="action_open_gl">OpenGL</string>
    <string name="action_user_setting">User Settings</string>
    <string name="action_debug_console">Debug Console</string>
    <string name="title_activity_user_settings">UserSettings</string>
    <string name="height_feet_text">Height in Feet</string>
    <string name="feet">ft</string>
    <string name="inches">inches</string>
    <string name="title_user_settings">BasicActivity</string>
    <string name="walking_direction">Walking Direction</string>


    <!-- Preference keys -->
    <string name="pref_key_height_ft">prefKeyHeightFt</string>
    <string name="pref_key_height_in">prefKeyHeightIn</string>
    <string name="pref_key_total_height_in">prefKeyTotalHeight</string>
    <string name="pref_key_user_control">preKeyUserControl</string>
    <string name="pref_key_height_ft_test">prefKeyHeightTest</string>
    <string name="pref_key_height_in_test">prefKeyHeightInTest</string>
    <string name="pref_key_alpha">prefKeyAlpha</string>
    <string name="pref_key_use_gyroscope">prefKeyUseGyroscope</string>
    <string name="compass_text">Compass Values</string>
    <string name="pref_key_use_cube">prefKeyUseCube</string>
    <string name="pref_key_render_shape">prefKeyRenderShape</string>
    <string name="pref_key_use_acceleration">prefKeyUseAcceleration</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finish_path_button_text">Finish Path</string>
    <string name="start_path_button_text">Start Path</string>
    <string name="restart_path_button_text">Start New Path</string>
    <string name="load_path_button_text">Load Path</string>
    <string name="step_coordinates_header">Step Coordinates</string>
    <string name="compass_info_header">Compass Info</string>
    <string name="pref_key_first_run">prefKeyFirstRun</string>
    <string name="title_activity_first_run_info">FirstRunInfo</string>
    <string name="pref_key_stride_length">prefKeyStrideLength</string>
    <string name="debug_console_label">Debug Console</string>
    <string name="pref_key_degree_filter">prefKeyDegreeFilter</string>
    <string name="successful_save">Successfully saved path %s</string>
    <string name="unsuccessful_save">Could not save file %s, try removing previous paths</string>
    <string name="compass_description">Compass pointer</string>
    <string name="zero_text">0</string>
    <string name="height_inches_text">Height in Inches</string>
    <string name="gender_text">Gender</string>
    <string name="female_text">Female</string>
    <string name="intersex_text">Intersex</string>
    <string name="male_text">Male</string>
    <string name="stride_length_text">Stride Length (inches)</string>
    <string name="continue_text">Continue!</string>

    <string name="showcase_path_start_text">Path Starter</string>
    <string name="showcase_path_start_description">Tapping the start button will start recording your path in 3D space! At the end press stop and you can move your path around or save it.</string>

    <string name="path_complete_title">Path Complete! Save Path?</string>
    <string name="positive_button_path">Save!</string>
    <string name="negative_button_path">Cancel</string>
    <string name="showcase_vr_mode">VR Mode</string>
    <string name="showcase_vr_mode_description">VR Mode allows you to observe your path in 3D space. User mode will allow you to pan around the map.</string>
    <string name="error_text_height">Please enter in a valid height.</string>
    <string name="pref_key_stride_type">prefKeyStrideType</string>
    <string name="pref_key_got_user_info">prefKeyGotUserInfo</string>
    <string name="path_manager_text">Path Manager</string>
    <string name="developer_settings_title">Dev Settings</string>
    <string name="title_activity_path_manager">Path Manager</string>
    <string name="path_name_header">Path Name:</string>
    <string name="delete_path_button_text">Delete Paths</string>
    <string name="manage_path_text">Manage Paths</string>
    <string name="save_path_positive_button">Save Path!</string>
    <string name="save_path_dialog_title">What is the name of this path?</string>
    <string name="end_altitude_card">End Altitude:</string>
    <string name="start_altitude_card">Start Altitude:</string>
    <string name="change_altitude_card">Change in Altitude</string>
    <string name="card_title">Path Statistics</string>
    <string name="step_card">Steps:</string>
    <string name="distance_card">Distance:</string>
    <string name="about_action">About And Third Party</string>
    <string name="title_activity_about">AboutActivity</string>
</resources>
