<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gps.capstone.traceroute.GLFiles.OpenGLActivity">
    <item android:id="@+id/path_manager_action"
          android:title="@string/path_manager_text"
          android:orderInCategory="1"
          app:showAsAction="always"
          android:icon="@drawable/ic_action_computer" />
    <item android:id="@+id/debug_console"
        android:title="@string/action_debug_console"
        android:orderInCategory="2"
        app:showAsAction="never" />
    <item android:id="@+id/user_settings"
        android:title="@string/action_user_setting"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/load_path"
          android:title="Load Path"
          app:showAsAction="never"/>
    <item android:id="@+id/developer_settings"
          android:title="@string/developer_settings_title"
          app:showAsAction="never"/>
</menu>
