<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="User Settings">

        <EditTextPreference android:key="@string/pref_key_height_ft"
            android:title="Height (Feet)"
            android:defaultValue="0"
            android:summary="Height in feet"
            android:dialogTitle="Height (ft)" />

        <EditTextPreference android:key="@string/pref_key_height_in"
            android:title="Height (Inches)"
            android:defaultValue="0"
            android:summary="Height in inches"
            android:dialogTitle="Height (in)" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Open GL Settings">

        <CheckBoxPreference android:key="@string/pref_key_user_control"
            android:defaultValue="false"
            android:title="User Control"
            android:summary="If checked, the user will be able to control the 3d model" />

    </PreferenceCategory>


</PreferenceScreen>