<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context="com.gps.capstone.traceroute.UserInfoActivity">

    <LinearLayout style="@style/InfoPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/info_height_feet"
            android:text="@string/height_feet_text"
            android:id="@+id/height_text"/>

        <EditText android:text="@string/zero_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:id="@+id/info_height_feet"
            />
    </LinearLayout>

    <LinearLayout style="@style/InfoPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/height_inches_text"
            android:labelFor="@+id/info_height_inches"
            android:id="@+id/height_inches_text"/>
        <EditText android:text="@string/zero_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:id="@+id/info_height_inches"/>
    </LinearLayout>


    <TextView android:text="@string/gender_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <RadioGroup android:id="@+id/gender"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/female"
             android:text="@string/female_text"
             android:checked="true"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:focusable="false"
             android:textIsSelectable="true"/>
        <RadioButton android:id="@+id/intersex"
                     android:text="@string/intersex_text"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:textIsSelectable="true"/>
        <RadioButton android:id="@+id/male"
             android:text="@string/male_text"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:focusable="false"
             android:textIsSelectable="true"/>
    </RadioGroup>

    <LinearLayout style="@style/InfoPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/stride_length_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/stride_length_text"
            android:labelFor="@+id/calculated_stride_length_edit"
            />
        <TextView android:id="@+id/calculated_stride_length_text"
            android:text="@string/zero_text"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"/>
        <EditText
            android:text="@string/zero_text"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:id="@+id/calculated_stride_length_edit"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button android:layout_gravity="bottom"
            android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/continue_text"
                android:id="@+id/continue_button"/>
    </LinearLayout>
</LinearLayout>
